--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -43,6 +43,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    
+      - uses: actions/checkout@v3
+  
+        # Configurar Java 17 para GitHub Actions
+      - name: Configurar JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adoptium'  # Puedes cambiar a 'zulu', 'oracle', etc.
+          
       - name: Analyze with SonarCloud
 
         # You can pin the exact commit or the version.
